--- a/md_test/file.html
+++ b/md_test/file.html
@@ -11,7 +11,8 @@
 <h1>Hello !</h1>
 <h2>Hello 2!</h2>
 <h3>Hello 3!</h3>
-<p>*bold!*</p>
+<p><strong>bold!</strong></p>
+<p><strong>bold 2 hello!</strong></p>
 <p><img src="img.jpg" alt="Image"></p>
 
     </div>
