add video to md_to_html

--- a/md_test/file.html
+++ b/md_test/file.html
@@ -14,6 +14,11 @@
 <p><strong>bold!</strong></p>
 <p><strong>bold 2 hello!</strong></p>
 <p><img src="img.jpg" alt="Image"></p>
+<p>Видео файл:</p>
+<p><iframe width="720" height="405"
+                            src="https://rutube.ru/play/embed/785fd539adc52994aa5a41f251288f03" frameBorder="0" allow="clipboard-write; autoplay"
+                            webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/VURUUmNXFi4?si=jOtR_kafuslSFuMv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
 
     </div>
 </body>
